# softy

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install_all.sh  install_min.sh  rust-lldb.rc  test.hipnc
benchmark/: Cargo.toml  README.md
benchmark/src/: lib.rs  main.rs  matrix_vector_mul.rs
cimplicits/: Cargo.toml  README.md  build.rs  install.fish
cimplicits/src/: lib.rs
geo/: Cargo.toml
geo/src/: lib.rs
hdk/: CMakeLists.txt  ImplicitsConfig.cmake  SimConfig.cmake  TestConfig.cmake
hdk/src/: GEO_VtkIO.C  SOP_Implicits.C  SOP_Implicits.h  SOP_Sim.C  SOP_Test.C  SOP_Test.h  interrupt.h  mesh.C  mesh.h
hdkrs/: Cargo.toml  README.md  build.rs  hdkrsConfig.cmake
hdkrs/src/: cffi.rs  interop.rs  io-inl.h  io.h  lib.rs  mesh-inl.h  mesh.h
implicits/: Cargo.toml
implicits-c/: Cargo.toml  build.rs  install.fish
implicits-c/src/: lib.rs
implicits-hdk/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  contact_jacobian_interpolation_test.hipnc
implicits-hdk/hdk/: CMakeLists.txt  ImplicitsConfig.cmake
implicits-hdk/hdk/src/: GEO_VtkIO.C  SOP_Implicits.C
implicits-hdk/hip/: alt_potential.hipnc
implicits-hdk/src/: api.rs  lib.rs
implicits/assets/: grid_points.json  hrbf_octahedron_vertex_grid_expected.vtk  octahedron_face_grid_expected.vtk  octahedron_vertex_grid_expected.vtk  projection_torus.vtk  torus_surf.json  torus_surf_no_tree.json
implicits/benches/: potential.rs
implicits/src/: field.rs  implicit_surface.rs  kernel.rs  lib.rs
implicits/src/field/: background_field.rs  background_potential.rs  builder.rs  experimental.rs  hessian.rs  jacobian.rs  neighbor_cache.rs  neighbour_cache.rs  query.rs  samples.rs  spatial_tree.rs
scene-hdk/: CMakeLists.txt  Cargo.toml  README.md  build.rs
scene-hdk/hdk/: CMakeLists.txt  SceneConfig.cmake
scene-hdk/hdk/src/: SOP_SoftyScene.C  SOP_SoftyScene.h  hdk_softy_scene.txt
scene-hdk/src/: api.rs  lib.rs
softy/: Cargo.toml  unit_testing.hipnc
softy-eval/: Cargo.toml  README.md
softy-eval/examples/: box_swing.hipnc  box_swing_config.json  grasp.sfrb  tire.sfrb
softy-eval/src/: main.rs
softy-hdk/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  arm_probe.hipnc  block_slide.hipnc  build.rs  pinch.hipnc  test.hipnc
softy-hdk/assets/: bunny.vtk  tommy_arm.vtk
softy-hdk/hda/: el_bend_cloth.hdanc  el_puck.hdanc  el_regular_box.hdanc  el_relax_tets.hdanc  softy_solver.3.0.hdanc  softy_solver.hdanc  softy_solver2.hdanc
softy-hdk/hdk/: CMakeLists.txt  SoftyConfig.cmake
softy-hdk/hdk/src/: SOP_Sim.h  SOP_Softy.C  SOP_Softy.h  hdk_softy.txt
softy-hdk/src/: api.rs  lib.rs
softy-hdk/src/api/: mod.rs  solver.rs
softy/assets/: ball.vtk  ball_fixed.vtk  beam_nl_params.ron  box.vtk  box_squished.vtk  box_stretched.vtk  box_stretched_const_volume.vtk  box_stretched_const_volume_triangles.vtk  box_stretched_triangles.vtk  box_twist.vtk  box_twisted.vtk  box_twisted_const_volume.vtk  clamps.vtk  direct_assisted_static_nl_params.ron  direct_static_nl_params.ron  fully_deformable_contact_config.ron  fully_deformable_friction_coupling_config.ron  fully_deformable_lagged_friction_coupling_config.ron  iterative_assisted_static_nl_params.ron  iterative_static_nl_params.ron  medium_solid_material.ron  no_poisson_damped_soft_solid_material.ron  no_poisson_soft_solid_material.ron  soft_shell_material.ron  solid_beam_material.ron  static_nl_params.ron  stretch_plain_nl_params.ron  three_tets_dynamic_expected.vtk  three_tets_dynamic_volume_constraint_expected.vtk  three_tets_static_expected.vtk  three_tets_static_volume_constraint_expected.vtk  torus_tets.vtk  tri.vtk  tube.vtk  tube_cloth.vtk  twist_plain_nl_params.ron
softy/benches/: box.rs  box_squish.rs  box_stretch.rs  energy_hessian.rs  step_performance.rs
softy/src/: attrib_defines.rs  attrib_names.rs  bench.rs  constraint.rs  contact.rs  energy.rs  friction.rs  index.rs  io.rs  lib.rs  mask_iter.rs  matrix.rs  objects.rs  scene.rs  test_utils.rs
softy/src/constraints/: implicit_contact.rs  indexed_point_contact.rs  linearized_point_contact.rs  mod.rs  penalty_point_contact.rs  point_contact.rs  smooth_contact.rs  sp_implicit_contact.rs  volume.rs  volume_change_penalty.rs
softy/src/contact/: solver.rs
softy/src/energy_models/: elasticity.rs  gravity.rs  inertia.rs  mod.rs  momentum.rs  tet_nh.rs  volumetric_invertible_neohookean.rs  volumetric_neohookean.rs
softy/src/energy_models/elasticity/: tet_inv_nh.rs  tet_nh.rs  tet_snh.rs  tetmesh_nh.rs  tetsolid_nh.rs  tri_nh.rs  trimesh_nh.rs  trishell_nh.rs
softy/src/fem/: mod.rs  nl.rs  object_data.rs  opt.rs  problem.rs  solver.rs  state.rs
softy/src/friction/: contact_solver.rs  elastic_solver.rs  polar_solver.rs  proj_solver.rs  solver.rs
softy/src/objects/: fixed_object.rs  interior_edge.rs  material.rs  rigid_body.rs  shell.rs  solid.rs  tetmesh_surface.rs  tetsolid.rs  trishell.rs
softy/tests/: attrib.rs  beam_nl.rs  bend.rs  bend_nl.rs  bend_opt.rs  box.rs  box_nl.rs  box_opt.rs  contact.rs  contact_nl.rs  contact_opt.rs  friction.rs  friction_nl.rs  multibody.rs  one_tet.rs  one_tet_nl.rs  pinch.rs  rigid.rs  sim.rs  three_tets_tetmesh.rs  torus.rs  tube.rs  two_tets.rs
softy/tests/test_utils/: mod.rs
src/: api.rs  cffi.rs  (+25 more)
utils/: Cargo.toml
utils/benches/: angle.rs  determinant.rs  inverse.rs  matrix_add.rs  matrix_vector_mul_order.rs  mtx_mtx_mul.rs  mtx_vec_mul.rs  norm_squared.rs  sum.rs  trace.rs  transpose.rs
utils/benches/disabled/: vectorize.rs
utils/benches/preamble/: mod.rs
utils/src/: aref.rs  index.rs  lib.rs  soap.rs  transform.rs  zip.rs
utils/src/soap/: array.rs  array_math.rs  boxed.rs  chunked.rs  matrix.rs  range.rs  select.rs  slice.rs  sparse.rs  subset.rs  tensor.rs  tuple.rs  uniform.rs  uniset.rs  varset.rs  vec.rs  view.rs
utils/tests/: array_math.rs  atom_iter.rs  chunked_subset.rs  convert.rs  get.rs  nested_chunked.rs  split.rs  subset.rs  zip.rs
vtkio-hdk/: Cargo.toml  build.rs
vtkio-hdk/hdk/: CMakeLists.txt
vtkio-hdk/hdk/src/: GEO_VtkIO.C  add_mesh_visitor.h
(+59 files in other folders)
