[workspace]

members = [
    "geo",
    "utils",
    "softy",
    "softy-hdk",
    "implicits",
    "cimplicits",
    "implicits-hdk",
    "benchmark",
    "accelerate",
]

[profile.release]
debug = true # Change this to true to enable debug symbols in release mode
rpath = false

[patch.crates-io]
autodiff = {git = "https://github.com/elrnv/autodiff.git"}
meshx = { git = "https://github.com/elrnv/meshx.git" }
vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "no-lzma" }

[patch.'https://github.com/Andlon/mkl-sys']
mkl-sys = { git = "https://github.com/elrnv/mkl-sys.git" }
