[workspace]

members = [
    "utils",
    "softy",
    "softy-eval",
    "softy-hdk",
    "scene-hdk",
    "implicits",
    "cimplicits",
    "implicits-hdk",
    "benchmark",
]

[profile.release]
debug = true # Change this to true to enable debug symbols in release mode
rpath = false

[patch.crates-io]
# vtkio = { git = "https://github.com/elrnv/vtkio.git", branch = "no-lzma" }
# Ensure that downstream dependencies on meshx are the same as what we use for compatibility.
meshx = { version = "0.6", git = "https://github.com/elrnv/meshx.git", branch = "vtkio-0.7" }

#[patch.'https://github.com/Andlon/mkl-sys']
#mkl-sys = { git = "https://github.com/elrnv/mkl-sys.git" }

[workspace.dependencies]
geo = { package = "meshx", version = "0.6", git = "https://github.com/elrnv/meshx.git", branch = "vtkio-0.7", features = ["io", "serde_all"] }
