[package]
name = "benchmark"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "benchmark"

[dependencies]
packed_simd = { version = "0.3", optional = true }
utils = { path = "../utils" }
rand = "0.5"
