[package]
name = "benchmark"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "benchmark"

[[bin]]
name = "matrix_vector_mul"
path = "src/matrix_vector_mul.rs"

[dependencies]
packed_simd = { version = "0.3", optional = true }
tensr = { git = "https://github.com/elrnv/tensr.git" }
rand = "0.5"
