[package]
name = "cimplicits"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "cimplicits"
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = { path = "../geo" }
implicits = { path = "../implicits" }
bytemuck = "1.2"

[build-dependencies]
cbindgen = "0.14.3"
