[package]
name = "cimplicits"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "cimplicits"
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = { path = "../geo" }
implicits = { path = "../implicits" }
bytemuck = "1.7"
cxx = { version = "1.0", optional = true }

[build-dependencies]
cbindgen = "0.18"

