[package]
name = "cimplicits"
version = "0.3.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2021"

[lib]
name = "cimplicits"
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = { workspace = true }
implicits = { path = "../implicits" }
bytemuck = "1"
cxx = { version = "1.0", optional = true }

[build-dependencies]
cbindgen = "0.18"

