[package]
name = "hdkrs"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

#[lib]
#name = "hdkrs"
#crate-type = ["staticlib", "rlib"]

[dependencies]
gut = { package = "geo", path = "../geo" }
libc = "*"
bytemuck = "1.5"
hashbrown = "0.9"

[build-dependencies]
cbindgen = "0.14"
glob = "0.3"
