[package]
name = "implicits-hdk"
version = "0.2.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "implicitshdk"
crate-type = ["staticlib", "rlib"]

[dependencies]
geo = { path = "../geo" }
implicits = { path = "../implicits" }
cimplicits = { path = "../cimplicits" }
hdkrs = { path = "../hdkrs" }

[build-dependencies]
cbindgen = "0.14.2"
