[package]
name = "implicits-hdk"
version = "0.2.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "implicitshdk"
crate-type = ["staticlib", "rlib"]

[dependencies]
geo = { path = "../geo" }
implicits = { path = "../implicits" }
cimplicits = { path = "../cimplicits", features = ["cxx"] }
hdkrs = { path = "../../hdkrs/hdkrs" } #{ git = "https://github.com/elrnv/hdkrs.git" }
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = { git = "https://github.com/elrnv/cmake-rs.git" }