[package]
name = "softy-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "softy"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
anyhow = "1"
env_logger = { workspace = true }
geo = { workspace = true }
softy = { path = "../softy", features = ["mkl"] }
