[package]
name = "softy-eval"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "softy"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "1"
anyhow = "1"
env_logger = { workspace = true }
geo = { workspace = true }
gltfgen = { version = "0.8", git = "https://github.com/elrnv/gltfgen.git" }
softy = { path = "../softy", features = ["mkl"] }
ctrlc = "3"
indicatif = "0.17"