[package]
name = "softy-hdk"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "softyhdk"
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = { path = "../geo" }
utils = { path = "../utils" }
softy = { path = "../softy" }
libc = "*"
hdkrs = { path = "../hdkrs" }
lazy_static = "1.1"
log = "0.4"
env_logger = "0.7"

[build-dependencies]
cbindgen = "0.6"
