[package]
name = "softy-hdk"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "softyhdk"
crate-type = ["staticlib", "rlib"]

[dependencies]
geo = { path = "../geo" }
utils = { path = "../utils" }
softy = { path = "../softy" }
libc = "*"
hdkrs = { git = "https://github.com/elrnv/hdkrs.git" }
lazy_static = "1.1"
log = "0.4"
env_logger = "0.8"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
cmake = { git = "https://github.com/elrnv/cmake-rs.git" }
