[package]
name = "softy"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[dependencies]
na = { package = "nalgebra", version = "0.29" }
tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }
flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
ipopt = "0.5"
geo = { path = "../geo" }
rayon = "1.5"
reinterpret = "0.2"
bytemuck = { version = "1.7", features = ["extern_crate_alloc"] }
implicits = { path = "../implicits" }
unroll = "0.1"
approx = "0.5"
num-traits = "0.2"
#jemallocator = "0.3"
image = "0.23" # For visualizing large sparse matrices
utils = { path = "../utils" }
is_sorted = "0.1"
sprs = "0.11"
sprs-ldl = "0.9"
ndarray = "0.15"
af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
thiserror = "1.0.16"
lazycell = "1.2"
log = "0.4"
hashbrown = "0.11"
autodiff = { version = "0.4", features = ["na"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
partition = "0.1" # Fast in-place slice partitioning.

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"

[features]
unstable = ["criterion/real_blackbox"]

[[bench]]
name = "box_stretch"
harness = false

[[bench]]
name = "box_squish"
harness = false

[[bench]]
name = "energy_hessian"
harness = false
