[package]
name = "softy"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "softy"
path = "src/lib.rs"

[dependencies]
num_cpus = "0.2.13"
na = { package = "nalgebra", version = "0.30" }
tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff", "serde"] }
flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
ipopt = { version = "0.5", optional = true }
geo = { path = "../geo" }
rayon = "1.5"
reinterpret = "0.2"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
implicits = { path = "../implicits", features = ["serde_all"] }
unroll = "0.1"
approx = "0.5"
num-traits = "0.2"
#jemallocator = "0.3"
image = "0.23" # For visualizing large sparse matrices
utils = { path = "../utils" }
is_sorted = "0.1"
sprs = "0.10"
sprs-ldl = "0.9"
ndarray = "0.15"
af = { package = "arrayfire", git = "https://github.com/elrnv/arrayfire-rust.git", optional = true }
thiserror = "1.0.16"
lazycell = "1.2"
log = "0.4"
ahash = "0.7"
autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["na"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = { git = "https://github.com/elrnv/ron.git", version = "0.7" }
bincode = "1.3"
partition = "0.1" # Fast in-place slice partitioning.
mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"] }
#mkl-corrode = { path = "../../mkl-corrode", features = ["ilp64", "tbb"] }

#simd-json = { version = "0.4", optional = true }
#serde_json = { version = "1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accelerate = { package = "accelerate-framework", git = "https://github.com/elrnv/accelerate-rs.git" }

[dev-dependencies]
criterion = "0.3"
env_logger = "0.9"

[features]
default = []
unstable = ["criterion/real_blackbox"]
optsolver = ["ipopt"]

[[bench]]
name = "box_stretch"
harness = false

[[bench]]
name = "box_squish"
harness = false

[[bench]]
name = "energy_hessian"
harness = false

[[test]]
name = "rigid"
required-features = ["optsolver"]
[[test]]
name = "bend_opt"
required-features = ["optsolver"]
[[test]]
name = "box_opt"
required-features = ["optsolver"]
[[test]]
name = "contact_opt"
required-features = ["optsolver"]
[[test]]
name = "friction"
required-features = ["optsolver"]
[[test]]
name = "multibody"
required-features = ["optsolver"]
[[test]]
name = "one_tet_opt"
required-features = ["optsolver"]
[[test]]
name = "pinch"
required-features = ["optsolver"]
[[test]]
name = "sim"
required-features = ["optsolver"]
[[test]]
name = "three_tets_tetmesh"
required-features = ["optsolver"]
[[test]]
name = "tube"
required-features = ["optsolver"]
