[package]
name = "softy"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2021"

[lib]
name = "softy"
path = "src/lib.rs"

[dependencies]
num_cpus = "1"
na = { workspace = true }
tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff", "serde"] }
flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
geo = { workspace = true }
rayon = "1.5"
reinterpret = "0.2"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
implicits = { path = "../implicits", features = ["serde_all"] }
unroll = "0.1"
approx = "0.5"
num-traits = "0.2"
#jemallocator = "0.3"
image = "0.25" # For visualizing large sparse matrices
utils = { path = "../utils" }
is_sorted = "0.1"
sprs = "0.11"
sprs-ldl = "0.10"
ndarray = "0.16"
thiserror = "1.0.16"
lazycell = "1.2"
log = "0.4"
ahash = "0.8"
autodiff = { git = "https://github.com/elrnv/autodiff.git", features = ["na"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
ron = { git = "https://github.com/elrnv/ron.git", version = "0.7" }
bincode = "1.3"
partition = "0.1" # Fast in-place slice partitioning.

#simd-json = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accelerate = { package = "accelerate-framework", version = "0.2" }

[target.'cfg(target_os = "windows")'.dependencies]
mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "openmp"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mkl-corrode = { git = "https://github.com/elrnv/mkl-corrode.git", features = ["ilp64", "tbb"], optional = true }

[dev-dependencies]
criterion = "0.3"
env_logger = { workspace = true }

[features]
default = ["deterministic", "mkl", "json"]
unstable = ["criterion/real_blackbox"]
mkl = ["mkl-corrode"]
deterministic = [] # Enables seeded random state.
json = ["serde_json"]
ci = ["deterministic", "json"] # MKL not used in CI to avoid complex build steps.

[[bench]]
name = "box_stretch"
harness = false

[[bench]]
name = "energy_hessian"
harness = false
