[package]
name = "utils"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
geo = { package = "gut", version = "0.2", features = ["io"] }
rand = "0.5"
typenum = "1.10"
reinterpret = "0.2"
sprs = { version = "0.6.4", optional = true }
image = "0.22"
unroll = "0.1"
num-traits = "0.2"
rayon = "1.2"
autodiff = { version = "0.1", optional = true }

[dev-dependencies]
approx = "0.3"
cgmath = "0.17"
criterion = "0.3"

[features]
unstable = ["criterion/real_blackbox"]
default = ["sprs"]

[[bench]]
name = "sum"
harness = false
#[[bench]]
#name = "vectorize"
#harness = false
[[bench]]
name = "norm_squared"
harness = false
[[bench]]
name = "trace"
harness = false
[[bench]]
name = "determinant"
harness = false
[[bench]]
name = "inverse"
harness = false
[[bench]]
name = "transpose"
harness = false
[[bench]]
name = "mtx_vec_mul"
harness = false
[[bench]]
name = "mtx_mtx_mul"
harness = false
