[package]
name = "utils"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
geo = { path = "../geo" }
rand = "0.7"
typenum = "1.10"
reinterpret = "0.2"
sprs = { version = "0.7.1", optional = true }
image = "0.23"
unroll = "0.1"
num-traits = "0.2"
rayon = "1.3"
autodiff = { version = "0.2", optional = true }
packed_simd = { version = "0.3", optional = true }
approx = { version = "0.3", optional = true }
tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }

[dev-dependencies]
cgmath = "0.17"
criterion = "0.3"

[features]
unstable = ["criterion/real_blackbox", "packed_simd"]
default = ["sprs", "approx"]

[[bench]]
name = "sum"
harness = false
#[[bench]]
#name = "vectorize"
#harness = false
[[bench]]
name = "norm_squared"
harness = false
[[bench]]
name = "trace"
harness = false
[[bench]]
name = "determinant"
harness = false
[[bench]]
name = "inverse"
harness = false
[[bench]]
name = "transpose"
harness = false
[[bench]]
name = "mtx_vec_mul"
harness = false
[[bench]]
name = "mtx_mtx_mul"
harness = false
[[bench]]
name = "matrix_vector_mul_order"
harness = false
[[bench]]
name = "matrix_add"
harness = false
[[bench]]
name = "angle"
harness = false
