[package]
name = "utils"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
geo = { path = "../geo" }
rand = "0.8"
typenum = "1.12"
reinterpret = "0.2"
sprs = { version = "0.10", optional = true }
image = "0.23"
unroll = "0.1"
num-traits = "0.2"
rayon = "1.5"
autodiff = { git = "https://github.com/elrnv/autodiff.git", optional = true }
packed_simd = { version = "0.3", optional = true }
approx = { version = "0.4", optional = true }
tensr = { git = "https://github.com/elrnv/tensr.git", features = ["autodiff"] }

[dev-dependencies]
cgmath = "0.18"
criterion = "0.3"

[features]
unstable = ["criterion/real_blackbox", "packed_simd"]
default = ["sprs", "approx"]

[[bench]]
name = "angle"
harness = false
