[package]
name = "vtkio-hdk"
version = "0.1.0"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
edition = "2018"

[lib]
name = "vtkiohdk"
crate-type = ["staticlib", "rlib"]

[dependencies]
geometry = { git = "https://gitlab.com/elrnv/geometry.git" }
hdkrs = { path = "../hdkrs" }

[build-dependencies]
cbindgen = "0.6"
